...
                .maskText(widget.contato!.numero.toString())
                .length,
          ),
        );
      } else if (widget.contato!.marcadorNumero == 2) {
        // Celular
        _selectedItem = 'Celular';
        isPhoneNumberEnabled = true;
        numeroController.text = widget.contato!.numero.toString();
        numeroController.value = numeroController.value.copyWith(
          text: mascaras.mascaraCelular
              .maskText(widget.contato!.numero.toString()),
          selection: TextSelection.collapsed(
...
                    }
                  });
                  insertOrUpdate();
                  Navigator.pop(context);
                },
                child: const Text(
                  key: Key("salvar"),
                  "Salvar",
                  style: TextStyle(color: Colors.white, fontSize: 16),
                ),
              ),
            ),
          ],
...
                const SizedBox(height: 40),
                Row(
                  mainAxisAlignment: MainAxisAlignment.start,
                  children: [
                    Expanded(
                      child: _buildInput("Nome", [], nomeController, true,
                          Icons.person, "nomeTextField"),
                    ),
                  ],
                ),
                const SizedBox(height: 40),
                Row(
                  mainAxisAlignment: MainAxisAlignment.start,
                  children: [
                    Expanded(
                      child: _buildInput("Sobrenome", [], sobrenomeController,
                          true, Icons.account_circle, "sobrenomeTextField"),
                    ),
                  ],
                ),
                const SizedBox(height: 40),
                _buildDropDown(context, Icons.numbers, "dropdownKey"),
                const SizedBox(height: 40),
                Row(
                  mainAxisAlignment: MainAxisAlignment.start,
                  children: [
                    Expanded(
                      child: _buildInput(
...
                                ? mascaras.mascaraTelefone
                                : mascaras.mascaraCelular,
                          ],
                          numeroController,
                          isPhoneNumberEnabled,
                          Icons.phone,
                          "numeroTextField"),
                    ),
                  ],
                ),
                const SizedBox(height: 40),
                Row(
                  mainAxisAlignment: MainAxisAlignment.start,
                  children: [
                    Expanded(
                      child: _buildInput("Email", [], emailController, true,
                          Icons.email, "emailTextField"),
                    ),
                  ],
                ),
              ],
            ),
          ),
...
